<resources>
    <string name="app_name">QrCodeScanning</string>
    <string name="success">Success</string>
    <string name="scan_again">Scan again</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="name_hint">Chirss Morris</string>
    <string name="dob">Date Of Birth</string>
    <string name="dob_hint">29 Feb 2020</string>
    <string name="phone">Phone</string>
    <string name="phone_hint">+880 1758621452</string>
    <string name="email">Email</string>
    <string name="email_hint">chrissmorris@gmail.com</string>
    <string name="show_ticket_log">Show ticket log</string>
    <string name="noData">No ticket has been scanned yet</string>
    <string name="date_hint">23rd Jan 2020</string>
    <string name="ticket_no">Ticket No.</string>
    <string name="scan_time">Scan Time</string>
    <string name="status">Status</string>
    <string name="ticket_no_hint">0001</string>
    <string name="scan_time_hint">5:46:15 PM</string>
    <string name="status_hint">Valid</string>
    <string name="ticket_log">Ticket Log</string>
    <string name="invalid">Invalid</string>
</resources>
