<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:elevation="0dp"
        android:id="@+id/app_bar">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tool_bar"
            android:background="@color/md_white_1000">

            <ImageView
                android:id="@+id/back"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="4dp"
                android:src="@drawable/ic_back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/md_grey_800"
                android:textSize="20sp"
                android:layout_marginLeft="32dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/profile"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_below="@id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainLayout"
        android:layout_gravity=""
        android:orientation="vertical">

<!--        <de.hdodenhof.circleimageview.CircleImageView-->
<!--            android:id="@+id/userIcon"-->
<!--            android:layout_width="96dp"-->
<!--            android:layout_height="96dp"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:src="@drawable/face_happy"/>-->


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/login_cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="5dp"
                    app:cardBackgroundColor="@color/md_grey_800"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="70dp"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="48dp"
                        android:layout_marginBottom="16dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/md_white_1000"
                                android:padding="4dp"
                                android:textSize="14sp"
                                android:text="@string/name"/>

                            <TextView
                                android:id="@+id/Name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/md_white_1000"
                                android:padding="4dp"
                                android:textSize="14sp"
                                android:text="@string/name_hint"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginTop="8dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/md_white_1000"
                                android:padding="4dp"
                                android:textSize="14sp"
                                android:text="@string/dob"/>

                            <TextView
                                android:id="@+id/DOB"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/md_white_1000"
                                android:padding="4dp"
                                android:textSize="14sp"
                                android:text="@string/dob_hint"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginTop="8dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/md_white_1000"
                                android:padding="4dp"
                                android:textSize="14sp"
                                android:text="@string/phone"/>

                            <TextView
                                android:id="@+id/Mobile"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/md_white_1000"
                                android:padding="4dp"
                                android:textSize="14sp"
                                android:text="@string/phone_hint"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginTop="8dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/md_white_1000"
                                android:padding="4dp"
                                android:textSize="14sp"
                                android:text="@string/email"/>

                            <TextView
                                android:id="@+id/Email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/md_white_1000"
                                android:padding="4dp"
                                android:textSize="14sp"
                                android:text="@string/email_hint"/>

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userIcon"
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/face_happy"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
