<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:elevation="0dp"
        android:id="@+id/app_bar">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tool_bar"
            android:background="@color/md_white_1000">

            <ImageView
                android:id="@+id/back"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="4dp"
                android:src="@drawable/ic_menu_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/md_grey_800"
                android:textSize="20sp"
                android:layout_marginLeft="32dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/app_name"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_below="@id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainLayout"
        android:layout_gravity=""
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:weightSum="1">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/face_happy"
                android:layout_gravity="center"
                app:civ_border_width="1px"
                android:layout_marginTop="8dp"
                app:civ_border_color="@color/md_white_1000"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_success"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_gravity="center"
                    android:gravity="center|left"
                    android:textSize="16sp"
                    android:textColor="@color/md_green_800"
                    android:text="@string/success"/>

            </LinearLayout>

            <Button
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/profile"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:textAllCaps="false"
                android:background="@drawable/rectangle_rounded_background"
                android:textColor="@color/md_grey_800"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/scanAgain"
            android:layout_width="144dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/md_white_1000"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@drawable/rectangle_rounded_background_black"
            android:text="@string/scan_again"/>

        <Button
            android:id="@+id/ticketLog"
            android:layout_width="144dp"
            android:layout_height="40dp"
            android:textAllCaps="false"
            android:textColor="@color/md_white_1000"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@drawable/rectangle_rounded_background_black"
            android:text="@string/show_ticket_log"/>

    </LinearLayout>

</RelativeLayout>
